[gd_scene load_steps=3 format=3 uid="uid://hupaolatm8pa"]

[ext_resource type="Theme" uid="uid://b3klx57slj0l3" path="res://UIUX/soft_retro.tres" id="1_ce71r"]
[ext_resource type="Script" uid="uid://gvlc33nxy2ls" path="res://Entities/Scripts/game_mode_selector.gd" id="1_j3bn5"]

[node name="GameModeSelector" type="Node"]
script = ExtResource("1_j3bn5")

[node name="GameModeSelector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ce71r")

[node name="Label" type="Label" parent="GameModeSelector"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -438.5
offset_top = 44.0
offset_right = 470.5
offset_bottom = 280.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 155
text = "Select Mode"

[node name="StoryModeButton" type="Button" parent="GameModeSelector"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -524.0
offset_top = -47.5
offset_right = 524.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Story Mode (coming soon)"

[node name="SandboxModeButton" type="Button" parent="GameModeSelector"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -524.0
offset_top = 61.0
offset_right = 524.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Sandbox Mode"

[node name="BackToMainButton" type="Button" parent="GameModeSelector"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1667.0
offset_top = 905.0
offset_right = 1771.0
offset_bottom = 966.0
theme_override_font_sizes/font_size = 61
text = "Main"
